# Omnivra-AI---Multi-Agent-AI-Platform-

./: .editorconfig  .env.example  .gitignore  DEPLOY.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-docs.txt  requirements-render.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/agents/: __init__.py  registry.py  runner.py
backend/app/api/: deps.py  router.py
backend/app/checkpoint/: __init__.py  store.py
backend/app/core/: config.py  logging.py  security.py
backend/app/data/: seed.py
backend/app/db/: client.py
backend/app/graph/: __init__.py  approval.py  builder.py  kill_switch.py  planner.py  state.py
backend/app/providers/: __init__.py  _compat.py  base.py  google_ai.py  groq.py  huggingface.py  openrouter.py  registry.py
backend/app/schemas/: __init__.py  dashboard.py  departments.py  media.py  (+7 more)
backend/db/: README.md
backend/tests/: conftest.py  test_agent_registry.py  test_api.py  test_app_runner.py  test_approval_resume.py  test_auth.py  test_dashboard_live.py  test_departments.py  test_documents.py  test_health.py  test_kill_switch.py  test_knowledge.py  test_media.py  test_memory_rag.py  test_orchestration.py  test_project_isolation.py  test_projects_tasks.py  test_provider_keypool.py  test_provider_keys.py  test_realtime.py  test_security.py  test_seed_sync.py  test_social.py  test_social_publishers.py  test_supabase_mapping.py  test_user_isolation.py  test_vectorstore.py  test_workspace_artifacts.py  test_workspace_paths.py  test_workspace_sandbox.py
(+244 files in other folders)
